--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "fastify": "^4.21.0",
     "handlebars": "^4.7.8",
     "node-fetch": "^3.3.2",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "axios": "^1.6.0"
   },
   "engines": {
     "node": "14.x"
