🌹🏉 Checkpoint ./package.json:77930599/986 ./server.js:77930599/6644

--- a/package.json
+++ b/package.json
@@ -1,31 +1,15 @@
 {
-  "name": "glitch-hello-node",
-  "version": "0.1.0",
-  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
+  "name": "telegram-bot",
+  "version": "1.0.0",
+  "description": "Telegram bot for A.D.E.I.T.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/static": "^6.10.2",
-    "@fastify/view": "^8.0.0",
-    "dotenv": "^16.5.0",
-    "fastify": "^4.21.0",
-    "handlebars": "^4.7.8",
-    "node-fetch": "^3.3.2",
-    "telegraf": "^4.16.3",
-    "axios": "^1.6.0"
-  },
-  "engines": {
-    "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-node"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch"
-  ]
+    "dotenv": "^10.0.0",
+    "telegraf": "^4.0.0",
+    "fs-extra": "^10.0.0"
+  }
 }
+
