--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "telegram-bot",
   "version": "1.0.0",
-  "description": "Telegram bot for A.D.E.I.T.",
+  "description": "Telegram bot A.D.E.I.T.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
     "telegraf": "^4.0.0",
-    "fs-extra": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "axios": "^0.21.1",
+    "fastify": "^3.0.0"
   }
 }
+
+
 
