--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "telegraf": "^4.16.3",
     "dotenv": "^16.5.0",
     "axios": "^0.30.0",
-    "fastify": "^5.3.2"
+    "fastify": "^5.3.2",
+    "@etransfer/utils": "^1.14.0"
   }
 }
