--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
-  "name": "telegram-bot",
-  "version": "1.0.0",
-  "description": "Telegram bot A.D.E.I.T.",
+  "name": "glitch-hello-node",
+  "version": "0.1.0",
+  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "telegraf": "^4.16.3",
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/static": "^8.1.1",
+    "@fastify/view": "^11.0.0",
     "dotenv": "^16.5.0",
-    "axios": "^0.30.0",
     "fastify": "^5.3.2",
-    "@etransfer/utils": "^1.14.0"
-  }
+    "handlebars": "^4.7.8",
+    "node-fetch": "^3.3.2",
+    "telegraf": "^4.16.3"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "repository": {
+    "url": "https://glitch.com/edit/#!/glitch-hello-node"
+  },
+  "license": "MIT",
+  "keywords": [
+    "node",
+    "glitch"
+  ]
 }
